Deployment resources and a couple bug fixes found in deploying

--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Shift Manager</title>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <!-- development-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- development
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <!-- production
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>-->
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    -->
+    <!-- production-->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
